[gd_scene load_steps=27 format=3 uid="uid://dyeqacmwaajfm"]

[ext_resource type="Script" uid="uid://b3kpus4t1p7wb" path="res://Scripts/GameCore.gd" id="1_hqmbo"]
[ext_resource type="Resource" uid="uid://dtootndbrxot5" path="res://Scripts/GameData/gamedata.tres" id="2_pv0oa"]
[ext_resource type="Script" uid="uid://pd0osfgx4yb3" path="res://Scripts/UI/PlayerUI.gd" id="2_rvkrq"]
[ext_resource type="Texture2D" uid="uid://bmw4fxmnmwhov" path="res://Assets/HUD/arrow.png" id="3_lfu1f"]
[ext_resource type="Texture2D" uid="uid://dj66rmlusn18r" path="res://Assets/HUD/healthbar.png" id="4_jrstp"]
[ext_resource type="Texture2D" uid="uid://dytgmrs4piqfo" path="res://Assets/HUD/healthbar_unfilled.png" id="5_bof60"]
[ext_resource type="Texture2D" uid="uid://b5pka5jiu0eq6" path="res://Assets/HUD/healthbar_filled.png" id="6_hdu6m"]
[ext_resource type="Script" uid="uid://bfy5mr2cqosb4" path="res://Scripts/FPSCounter.gd" id="7_w6m7r"]
[ext_resource type="FontFile" uid="uid://3ydmlj7unul" path="res://Assets/Fonts/Coming_Soon/ComingSoon-Regular.ttf" id="8_sfslp"]
[ext_resource type="Script" uid="uid://cr5xyp1e785a1" path="res://Scripts/UI/PhotomodeSelector.gd" id="9_c5w3r"]
[ext_resource type="Texture2D" uid="uid://cy2xyav126k3y" path="res://Assets/HUD/Photomode/Photomode_Normal.png" id="9_fxl5q"]
[ext_resource type="Theme" uid="uid://4k2un7nm7xc6" path="res://UITheme.tres" id="9_hs5nv"]
[ext_resource type="Texture2D" uid="uid://dxflpmkfl4tgx" path="res://Assets/HUD/Photomode/Photomode_Toon.png" id="10_c5w3r"]
[ext_resource type="Script" uid="uid://d2p44uvd2dsa1" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="10_wm02x"]
[ext_resource type="Script" uid="uid://b433w3r1hhutv" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="11_kcrab"]
[ext_resource type="Texture2D" uid="uid://cyhalf2ty4xex" path="res://Assets/HUD/Photomode/Photomode_EdgeDetect.png" id="11_wqkrr"]
[ext_resource type="Script" uid="uid://dvil74f7w4m8p" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="12_wmvxn"]
[ext_resource type="Script" uid="uid://dd42qh1cpvys1" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="13_clcop"]
[ext_resource type="Environment" uid="uid://cpjkvy5s2l8ae" path="res://Assets/Environments/RealVirtualityGraphics.tres" id="14_uvye0"]
[ext_resource type="PackedScene" uid="uid://bjbe75eis8tu6" path="res://Scenes/Settings.tscn" id="15_85lew"]
[ext_resource type="PackedScene" uid="uid://ce8coeohfwec8" path="res://Assets/Locations/loc_home_2025.tscn" id="17_yj2b2"]

[sub_resource type="RichTextEffect" id="RichTextEffect_2du4k"]
script = ExtResource("11_kcrab")

[sub_resource type="RichTextEffect" id="RichTextEffect_r3l8j"]
script = ExtResource("12_wmvxn")

[sub_resource type="RichTextEffect" id="RichTextEffect_q6nqb"]
script = ExtResource("13_clcop")

[sub_resource type="Animation" id="Animation_4tulc"]
resource_name = "music_change"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o7fn3"]
_data = {
&"music_change": SubResource("Animation_4tulc")
}

[node name="Game" type="Node3D"]
script = ExtResource("1_hqmbo")
game_data = ExtResource("2_pv0oa")

[node name="PlayerUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_rvkrq")

[node name="Cursor" type="TextureRect" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lfu1f")

[node name="HealthBarIcon" type="TextureRect" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015
anchor_top = 0.974
anchor_right = 0.015
anchor_bottom = 0.974
offset_left = -12.8
offset_top = -11.92
offset_right = 11.2
offset_bottom = 12.08
grow_vertical = 0
texture = ExtResource("4_jrstp")

[node name="HealthBar" type="TextureProgressBar" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.963
anchor_right = 0.171
anchor_bottom = 0.985
offset_left = 0.32
offset_top = -0.0400391
offset_right = -0.320007
offset_bottom = 0.199951
grow_vertical = 0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_under = ExtResource("5_bof60")
texture_progress = ExtResource("6_hdu6m")

[node name="Counter" type="Label" parent="PlayerUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
text = "FPS"
script = ExtResource("7_w6m7r")

[node name="help" type="Label" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 26.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "QUICK_MANUAL"
horizontal_alignment = 2

[node name="BossContainer" type="VBoxContainer" parent="PlayerUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 256.0
grow_horizontal = 2

[node name="PauseMenu" type="Control" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PlayerUI/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.237
anchor_bottom = 1.0
offset_right = 0.959961
grow_horizontal = 2
grow_vertical = 2

[node name="ExitButton" type="Button" parent="PlayerUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.089
anchor_right = 0.491
anchor_bottom = 0.089
offset_left = -191.896
offset_top = -32.12
offset_right = 192.104
offset_bottom = 31.88
text = "EXIT"

[node name="SettingsButton" type="Button" parent="PlayerUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.179
anchor_right = 0.491
anchor_bottom = 0.179
offset_left = -191.896
offset_top = -30.32
offset_right = 192.104
offset_bottom = 30.68
text = "SETTINGS"

[node name="PhotomodeButton" type="Button" parent="PlayerUI/PauseMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_top = 0.267
anchor_right = 0.491
anchor_bottom = 0.267
offset_left = -191.896
offset_top = -32.36
offset_right = 192.104
offset_bottom = 31.64
text = "PHOTOMODE"

[node name="PhotomodeSelector" type="HBoxContainer" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -184.0
offset_right = 256.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("9_c5w3r")

[node name="Normal" type="TextureButton" parent="PlayerUI/PhotomodeSelector"]
layout_mode = 2
texture_normal = ExtResource("9_fxl5q")
texture_pressed = ExtResource("9_fxl5q")
texture_hover = ExtResource("9_fxl5q")

[node name="Toon" type="TextureButton" parent="PlayerUI/PhotomodeSelector"]
layout_mode = 2
texture_normal = ExtResource("10_c5w3r")
texture_pressed = ExtResource("10_c5w3r")
texture_hover = ExtResource("10_c5w3r")

[node name="EdgeDetect" type="TextureButton" parent="PlayerUI/PhotomodeSelector"]
layout_mode = 2
texture_normal = ExtResource("11_wqkrr")
texture_pressed = ExtResource("11_wqkrr")
texture_hover = ExtResource("11_wqkrr")

[node name="GameOverPanel" type="Control" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PlayerUI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="PlayerUI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ODeath" type="Label" parent="PlayerUI/GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.245
anchor_right = 0.5
anchor_bottom = 0.245
offset_left = -112.0
offset_top = -48.6
offset_right = 113.0
offset_bottom = 49.4
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_sfslp")
theme_override_font_sizes/font_size = 64
text = "DEATH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reason" type="Label" parent="PlayerUI/GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.419
anchor_right = 0.5
anchor_bottom = 0.419
offset_left = -320.0
offset_top = -108.52
offset_right = 320.0
offset_bottom = 107.48
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="PlayerUI/GameOverPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.613
anchor_right = 0.5
anchor_bottom = 0.613
offset_left = -128.0
offset_top = -38.04
offset_right = 128.0
offset_bottom = 37.6399
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_hs5nv")
text = "RETURN_TO_GAME"

[node name="MenuButton" type="Button" parent="PlayerUI/GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.744
anchor_right = 0.5
anchor_bottom = 0.744
offset_left = -128.0
offset_top = -35.52
offset_right = 128.0
offset_bottom = 36.48
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("9_hs5nv")
text = "RETURN_TO_MENU"

[node name="GiveUpButton" type="Button" parent="PlayerUI/GameOverPanel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.863
anchor_right = 0.5
anchor_bottom = 0.863
offset_left = -128.0
offset_top = -36.04
offset_right = 128.0
offset_bottom = 35.96
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("9_hs5nv")
text = "GIVE_UP"

[node name="DevWarning" type="Label" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -634.5
offset_top = -96.0
offset_right = 634.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "PRERELEASE_WARN"
horizontal_alignment = 1

[node name="LoadingNewLocation" type="Panel" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.5
offset_top = -40.0
offset_right = 144.5
grow_horizontal = 2
grow_vertical = 0

[node name="LoadingLabel" type="Label" parent="PlayerUI/LoadingNewLocation"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.5
offset_right = 102.5
offset_bottom = 23.0
grow_horizontal = 2
text = "LOADING_NEW_LOCATION"

[node name="LoadProgress" type="TextureProgressBar" parent="PlayerUI/LoadingNewLocation"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -16.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0
texture_under = ExtResource("5_bof60")
texture_progress = ExtResource("6_hdu6m")
tint_progress = Color(1, 1, 0, 1)

[node name="DialogueBox" type="Panel" parent="PlayerUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.865
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.200073
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("9_hs5nv")
script = ExtResource("10_wm02x")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_2du4k"), SubResource("RichTextEffect_r3l8j"), SubResource("RichTextEffect_q6nqb")])

[node name="Settings" parent="PlayerUI" instance=ExtResource("15_85lew")]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Items" type="Node" parent="."]

[node name="MapObjects" type="Node" parent="."]

[node name="Ragdolls" type="Node3D" parent="."]

[node name="NPCs" type="Node" parent="."]

[node name="Decals" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("14_uvye0")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o7fn3")
}

[node name="Loc_Home" parent="." instance=ExtResource("17_yj2b2")]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-0.0146777, 0, 0.999892, 0, 1, 0, -0.999892, 0, -0.0146777, -18.248, 54.5015, -2.26259)
text = "CITY_UNDER_SKY"

[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/ExitButton" to="PlayerUI" method="_on_exit_button_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/SettingsButton" to="PlayerUI" method="_on_settings_button_pressed"]
[connection signal="pressed" from="PlayerUI/PauseMenu/Panel/PhotomodeButton" to="PlayerUI" method="_on_photomode_button_pressed"]
[connection signal="visibility_changed" from="PlayerUI/PhotomodeSelector" to="PlayerUI/PhotomodeSelector" method="_on_visibility_changed"]
[connection signal="pressed" from="PlayerUI/PhotomodeSelector/Normal" to="PlayerUI/PhotomodeSelector" method="_on_normal_pressed"]
[connection signal="pressed" from="PlayerUI/PhotomodeSelector/Toon" to="PlayerUI/PhotomodeSelector" method="_on_toon_pressed"]
[connection signal="pressed" from="PlayerUI/PhotomodeSelector/EdgeDetect" to="PlayerUI/PhotomodeSelector" method="_on_edge_detect_pressed"]
[connection signal="pressed" from="PlayerUI/GameOverPanel/MenuButton" to="PlayerUI" method="_on_exit_button_pressed"]
[connection signal="dialogue_ended" from="PlayerUI/DialogueBox" to="PlayerUI" method="_on_dialogue_box_dialogue_ended"]
[connection signal="dialogue_signal" from="PlayerUI/DialogueBox" to="PlayerUI" method="_on_dialogue_box_dialogue_signal"]
